# Diplom

./: Dockerfile  README.md  diary.json  docker-compose.yaml  groups.json  pyproject.toml  users.json
config/: settings.py  urls.py
diary/: admin.py  forms.py  models.py  urls.py  views.py
diary/migrations/: 0001_initial.py  0002_alter_diary_unique_together.py  0003_alter_diary_user.py  0004_alter_diary_options.py
diary/templates/diary/: diary_confirm_delete.html  diary_detail.html  diary_form.html  diary_list.html  home.html  search.html
diary/templates/diary/includes/: nav_bar.html
diary/templates/diary/modules/: pagination.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_nickname.py  0003_alter_user_nickname.py
users/templates/: login.html
users/templates/users/: not_mail.html  reset_password.html  user_form.html
